# openHarness

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_CN.md  SECURITY.md  pyproject.toml  techspec-writing-guide.md
docs/: harness-backend-architecture-overview.md  sdd-harness-generation-architecture.md
input/PRD/: tech-stack.md
input/techspec/: tech-spec-cache.md  tech-spec-message-queue.md
src/openharness/: __init__.py  backend.py  banner.py  cli.py  infinite_dev.py  installer.py  knowledge_manager.py  monitor.py  opencode.json  restore_config.py
src/openharness/agents/: coder.md  fixer.md  initializer.md  orchestrator.md  reviewer.md  tester.md
src/openharness/generator/: __init__.py  changes.py  context.py  providers.py  service.py
src/openharness/runtime/: __init__.py  context.py  execution.py  reporting.py  state.py
src/openharness/utils/: __init__.py  config.py  metrics.py  project_id.py
tests/: conftest.py  test_backend_resolution.py  test_cli_help.py  test_codex_stdio.py  test_monitor.py  test_runtime_state.py
